--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,33 @@
     <div class="row align-items-center">
         <div class="col lg-3"></div>
         <div class="col lg-6">
-           <div class="card">
-               <div class="card-body">
-                   {{> jokeoftheday }}
-               </div>
-           </div> 
+            <div class="card">
+                <div class="card-body">
+                    {{> jokeoftheday }}
+                </div>
+            </div>
         </div>
         <div class="col lg-3"></div>
+    </div>
+    <div class="row align-items-center">
+        <div class="col lg-3"></div>
+        <div class="col lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="usernameInput" class="form-label">Username</label>
+                            <input type="email" class="form-control" id="usernameInput" aria-describedby="userNameHelp">
+                            <div id="userNameHelp" class="form-text">Usernames are case-sensitive.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="passInput" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="passInput">
+                        </div>
+                        <button type="submit" class="btn btn-success">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
