--- a/views/partials/jokeoftheday.handlebars
+++ b/views/partials/jokeoftheday.handlebars
@@ -1,2 +1,2 @@
-<h5 class="card-title"> "{{quote}}" </h5>
-<p class="card-subtitle text-muted">- {{author}}, {{origin}}</p>
+<h5 class="card-title" id="randoJokeText"> "{{quote}}" </h5>
+<p class="card-subtitle text-muted" id="jokeSource">- {{author}}, {{origin}}</p>
