Fixed index page bootstrap indentation, updated navbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,8 +28,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Repunsatory</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Profile</a>
+                    </li>
                 </ul>
-                <button class="btn btn-outline-success" type="click">Login</button>
+                {{!-- <button class="btn btn-outline-success" type="click">Login</button> --}}
             </div>
         </div>
     </nav>
