--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,17 @@
 <div class="container-md">
+    <div class="row align-itmes-center">
+        <div class="col lg-3"></div>
+        <div class= "col lg-6">
+            <h6>Welcome to the Dadabase! Please log in below.</h6>
+        </div>
+        <div class="col lg-3"></div>
+    </div>
     <div class="row align-items-center">
         <div class="col lg-3"></div>
         <div class="col lg-6">
             <div class="card">
                 <div class="card-body">
+                    <p class="lead text-center">Today's Daily Groaner:</p>
                     {{> jokeoftheday }}
                 </div>
             </div>
@@ -30,5 +38,6 @@
                 </div>
             </div>
         </div>
+        <div class="col lg-3"></div>
     </div>
 </div>
