Removed extra quotes from joke of the day display

--- a/views/partials/authoredList.handlebars
+++ b/views/partials/authoredList.handlebars
@@ -1,5 +1,5 @@
 <li>
-    <h5 class="card-title authTitle"> "{{quote}}" </h5>
+    <h5 class="card-title authTitle"> {{quote}} </h5>
     <p class="card-subtitle text-muted authSource">- {{author}}, {{origin}}</p>
     <button type="button" class="btn btn-primary btn-sm delete-joke" data-id="{{id}}">Delete Joke</button>
 </li>
