--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Repunsatory</a>
+                        <a class="nav-link" href="/repunsatory">Repunsatory</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                        <a class="nav-link" href="/profile">Profile</a>
                     </li>
                 </ul>
                 {{!-- <button class="btn btn-outline-success" type="click">Login</button> --}}
