--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+<div class="body">
 <div class="container-md">
     <div class="row align-itmes-center">
         <div class="col lg-3"></div>
@@ -40,4 +41,6 @@
         </div>
         <div class="col lg-3"></div>
     </div>
+</div>
+
 </div>
