--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,46 +1,46 @@
 <div class="body">
-<div class="container-md">
-    <div class="row align-itmes-center">
-        <div class="col lg-3"></div>
-        <div class= "col lg-6">
-            <h6>Welcome to the Dadabase! Please log in below.</h6>
+    <div class="container-md">
+        <div class="row align-items-center">
+            <div class="col lg-3"></div>
+            <div class="col lg-6">
+                <h6>Welcome to the Dadabase! Please log in below.</h6>
+            </div>
+            <div class="col lg-3"></div>
         </div>
-        <div class="col lg-3"></div>
-    </div>
-    <div class="row align-items-center">
-        <div class="col lg-3"></div>
-        <div class="col lg-6">
-            <div class="card">
-                <div class="card-body">
-                    <p class="lead text-center">Today's Daily Groaner:</p>
-                    {{> jokeoftheday }}
+        <div class="row align-items-center">
+            <div class="col lg-3"></div>
+            <div class="col lg-6">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="lead text-center">Today's Daily Groaner:</p>
+                        {{> jokeoftheday }}
+                    </div>
                 </div>
             </div>
+            <div class="col lg-3"></div>
         </div>
-        <div class="col lg-3"></div>
-    </div>
-    <div class="row align-items-center">
-        <div class="col lg-3"></div>
-        <div class="col lg-6">
-            <div class="card">
-                <div class="card-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="usernameInput" class="form-label">Username</label>
-                            <input type="email" class="form-control" id="usernameInput" aria-describedby="userNameHelp">
-                            <div id="userNameHelp" class="form-text">Usernames are case-sensitive.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="passInput" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="passInput">
-                        </div>
-                        <button type="submit" class="btn btn-success">Login</button>
-                    </form>
+        <div class="row align-items-center">
+            <div class="col lg-3"></div>
+            <div class="col lg-6">
+                <div class="card">
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="usernameInput" class="form-label">Username</label>
+                                <input type="email" class="form-control" id="usernameInput"
+                                    aria-describedby="userNameHelp">
+                                <div id="userNameHelp" class="form-text">Usernames are case-sensitive.</div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="passInput" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="passInput">
+                            </div>
+                            <button type="submit" class="btn btn-success">Login</button>
+                        </form>
+                    </div>
                 </div>
             </div>
+            <div class="col lg-3"></div>
         </div>
-        <div class="col lg-3"></div>
     </div>
-</div>
-
 </div>
