fixed tag in profile.handlebars

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,7 +24,7 @@
                     <h5 class="card-title">Chosen Laughs:</h5>
                     <ul>
                         {{#each jokes}}
-                        {{#if saved}}
+                        {{#if isSaved}}
                         {{> punlistblock}}
                         {{/if}}
                         {{/each}}
