--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -25,7 +25,7 @@
                     <h5 class="card-title text-center">The Dadabase</h5>
                     <br>
                     <ul>
-                        {{#each jokes}}
+                        {{#each Joke}}
                         {{> punlistblock }}
                         {{/each}}
                     </ul>
