added cards and background to index + repunsatory

--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -57,4 +57,20 @@
             </div>
         </div>
     </div>
+    {{! Added cards - For some reason my css wasn't hitting some divs, so I just styled them here }}
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
+              <img class="card-img" src="./jokeImg1.png" alt="Card image">
+            </div>
+        </div>
+
+        <div class="col-lg-6"></div>
+
+        <div class="col-lg-3">
+            <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
+                <img class="card-img" src="./jokeImg5.png" alt="Card image">
+            </div>
+        </div>
+      </div>
 </div>
