Fixed sticky footer, background scaling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,21 +11,22 @@
     <title>Dadabase</title>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column vh-100">
 
 
     {{{ body }}}
 
 
-    <footer class="footer bg-dark">
+    <footer class="footer bg-dark py-3 mt-auto">
         <div class="container">
-            <p class="text-center text-muted">&copy; 2021 ACDE </p>
+            <span class="text-muted">&copy; 2021 ACDE </span>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/{{logic}}"></script>
 </body>
 
 </html>
