--- a/public/stylesheets/repunsatory.css
+++ b/public/stylesheets/repunsatory.css
@@ -1,3 +1,14 @@
+.body {
+  background-image: url("../images/atomicPrint1.png");
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+  height:90vh;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
