--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,7 +1,18 @@
+.body {
+  background-image: url("../images/atomicPrint5.png");
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+  height:90vh;
+};
+
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
-  }
+};
