--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -1,3 +1,4 @@
+<div class="body">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Navbar</a>
@@ -73,4 +74,5 @@
             </div>
         </div>
       </div>
+  </div>
 </div>
