--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -68,7 +68,7 @@
         <div class="row">
         <div class="col-lg-3">
             <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
-              <img class="card-img" src="./jokeImg3.png" alt="Card image">
+              <img class="card-img" src="../public/images/jokeImg3.png" alt="Card image">
             </div>
         </div>
 
@@ -76,7 +76,7 @@
 
         <div class="col-lg-3">
             <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
-                <img class="card-img" src="./jokeImg2.png" alt="Card image">
+                <img class="card-img" src="../public/images/jokeImg2.png" alt="Card image">
             </div>
         </div>
       </div>
