--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -55,6 +55,21 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
+              <img class="card-img" src="../public/images/jokeImg7.png" alt="Card image">
+            </div>
+        </div>
+
+        <div class="col-lg-6"></div>
+
+        <div class="col-lg-3">
+            <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
+                <img class="card-img" src="../public/images/jokeImg6.png" alt="Card image">
+            </div>
+        </div>
+      </div>
 </div>
 
 </div>
