--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-lg-3">
             <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
-              <img class="card-img" src="./jokeImg1.png" alt="Card image">
+              <img class="card-img" src="../public/images/jokeImg1.png" alt="Card image">
             </div>
         </div>
 
@@ -70,7 +70,7 @@
 
         <div class="col-lg-3">
             <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
-                <img class="card-img" src="./jokeImg5.png" alt="Card image">
+                <img class="card-img" src="../public/images/jokeImg5.png" alt="Card image">
             </div>
         </div>
       </div>
