Added check function callback for password validation on signup

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -52,16 +52,15 @@
                             </div>
                             <div class="mb-3">
                                 <label for="passInput" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="passCreate" onkeyup="check();">
+                                <input type="password" class="form-control" id="passCreate" onkeyup="check()">
                                 <div id="passwordHelpBlock" class="form-text">
-                                    Please create a password that is 6-10 characters long, contains upper and lowercase
-                                    letters, at least one number, and no special characters.
+                                    Please create a password that is 6-20 characters long.
                                 </div>
-                            <div class="mb-3">
-                                <label for="passInput" class="form-label">Verify password</label>
-                                <input type="password" class="form-control" id="passVerify" onkeyup="check();">
-                                <span class="text-muted" id="message"></span>
-                            </div>        
+                                <div class="mb-3">
+                                    <label for="passInput" class="form-label">Verify password</label>
+                                    <input type="password" class="form-control" id="passVerify" onkeyup="check()">
+                                    <span class="text-muted" id="message"></span>
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">Submit</button>
                         </form>
