--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,25 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Creepster&family=Donegal+One&family=Fascinate+Inline&family=Joti+One&family=Modak&family=Monoton&family=Orbitron:wght@700&family=Ravi+Prakash&family=Reggae+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="stylesheets/{{style}}">
     <title>Dadabase</title>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column vh-100">
 
 
     {{{ body }}}
 
 
-    <footer class="footer bg-dark">
+    <footer class="footer bg-dark py-3 mt-auto">
         <div class="container">
-            <p class="text-center text-muted">&copy; 2021 ACDE </p>
+            <span class="text-muted">&copy; 2021 ACDE </span>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/{{logic}}"></script>
 </body>
 
 </html>
