Fixed syntax error - backgrounds now render in all their glory

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,4 +1,4 @@
-.body {
+body {
   background-image: url("../images/atomicPrint3.png");
   background-repeat: no-repeat;
   -webkit-background-size: cover;
