--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,4 +1,4 @@
-.body {
+body {
   background-image: url("../images/atomicPrint5.png");
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -6,8 +6,9 @@
   -o-background-size: cover;
   background-size: cover;
   overflow: hidden;
-  height:90vh;
-};
+  height: 100vh;
+}
+
 .card {
   margin-top: 30px;
 }
