Added card for random joke generator

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -63,4 +63,17 @@
             </div>
         </div>
     </div>
+    <div class="row align-items-center">
+        <div class="col lg-10">
+            <div class="card mb-3">
+                <div class="card-header text-center">Looking for inspiration?</div>
+                <div class="card-body">
+                    <h5 class="card-title text-center">Don't groan it alone! Click below for a random joke.</h5>
+                    <p class="lead"></p>
+                    <p class="lead"></p>
+                </div>
+                <button type="button" class="btn btn-success" id="randButton">One Joke, Please.</button>
+            </div>
+        </div>
+    </div>
 </div>
