--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -69,8 +69,8 @@
                 <div class="card-header text-center">Looking for inspiration?</div>
                 <div class="card-body">
                     <h5 class="card-title text-center">Don't groan it alone! Click below for a random joke.</h5>
-                    <p class="lead"></p>
-                    <p class="lead"></p>
+                    <p class="lead" id="setupTag"></p>
+                    <p class="lead" id="punchLineTag"></p>
                 </div>
                 <button type="button" class="btn btn-success" id="randButton">One Joke, Please.</button>
             </div>
