--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Creepster&family=Donegal+One&family=Fascinate+Inline&family=Joti+One&family=Modak&family=Monoton&family=Orbitron:wght@600&family=Ravi+Prakash&family=Reggae+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/{{style}}">
     <title>Dadabase</title>
 </head>
