Added unique ID to submit button

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -62,7 +62,7 @@
                                     <span class="text-muted" id="message"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="submit" class="btn btn-success" id="signBtn">Submit</button>
                         </form>
                     </div>
                     <div class="card-footer">
