Added styling to lists for clarity

--- a/views/partials/punlistblock.handlebars
+++ b/views/partials/punlistblock.handlebars
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item">
     <h5 class="card-title punTitle"> "{{quote}}" </h5>
     <p class="card-subtitle text-muted punSource">- {{author}}, {{origin}}</p>
 </li>
