--- a/views/partials/authoredList.handlebars
+++ b/views/partials/authoredList.handlebars
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item">
     <h5 class="card-title authTitle"> {{quote}} </h5>
     <p class="card-subtitle text-muted authSource">- {{author}}, {{origin}}</p>
     <button type="button" class="btn btn-primary btn-sm delete-joke" data-id="{{this.id}}">Delete Joke</button>
