Added styling to unordered lists to polish look

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -28,7 +28,7 @@
                 <div class="card-header">Authored Entries</div>
                 <div class="card-body">
                     <h5 class="card-title">Your gifts to the world:</h5>
-                    <ul>
+                    <ul class="list-group">
                         {{#if Joke}}
                         {{#each Joke}}
                         {{> authoredList}}
