--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -18,7 +18,6 @@
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
                 </ul>
-                {{!-- <button class="btn btn-outline-success" type="click">Login</button> --}}
             </div>
         </div>
     </nav>
@@ -48,7 +47,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">The Dadabase</h5>
                     <br>
-                    <ul>
+                    <ul class="list-group">
                         {{#each Joke}}
                         {{> punlistblock }}
                         {{/each}}
