changes to get the images to work

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -75,17 +75,17 @@
     </div>
     <div class="row">
         <div class="col-lg-3">
-            <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
-              <img class="card-img" src="../public/images/jokeImg7.png" alt="Card image">
+            <div class="container">
+                <img class="img-thumbnail" src="../public/images/jokeImg7.png" alt="Image Thumbnail" width="304" height="236">
             </div>
         </div>
 
         <div class="col-lg-6"></div>
 
         <div class="col-lg-3">
-            <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
-                <img class="card-img" src="../public/images/jokeImg6.png" alt="Card image">
-            </div>
+            <div class="container">
+                <img class="img-thumbnail" src="../public/images/jokeImg6.png" alt="Image Thumbnail" width="304" height="236">
+            </div>  
         </div>
       </div>
 </div>
