--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Navbar</a>
+            <a class="navbar-brand" href="/"><h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -9,10 +9,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Repunsatory</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/repunsatory">Repunsatory</a>
+                        <a class="nav-link active" href="/repunsatory">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
@@ -22,6 +22,11 @@
             </div>
         </div>
     </nav>
+
+
+
+
+   
 <div class="container">
     <div class="row align-items-center">
         <div class="col lg-3"></div>
@@ -45,7 +50,7 @@
     <div class="row align-items-center">
         <div class="col lg-10">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body" style="background-color: darkgoldenrod; font-family: 'Donegal One', serif; font-size:20px;">
                     <h5 class="card-title text-center">The Dadabase</h5>
                     <br>
                     <ul>
@@ -60,7 +65,7 @@
     {{! Added cards - For some reason my css wasn't hitting some divs, so I just styled them here }}
     <div class="row">
         <div class="col-lg-3">
-            <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
+            <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
               <img class="card-img" src="../public/images/jokeImg1.png" alt="Card image">
             </div>
         </div>
