Added styling to subtext for clarity

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
                                 <label for="usernameInput" class="form-label">Username</label>
                                 <input type="email" class="form-control" id="usernameInput"
                                     aria-describedby="userNameHelp">
-                                <div id="userNameHelp" class="form-text">Usernames are case-sensitive.</div>
+                                <div id="userNameHelp" class="form-text" style="color: white;">Usernames are case-sensitive.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="passInput" class="form-label">Password</label>
