--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <div class="row align-items-center">
+    {{!-- <div class="row align-items-center">
         <div class="col lg-10">
             <div class="card mb-3">
                 <div class="card-header text-center">Looking for inspiration?</div>
@@ -72,7 +72,7 @@
                 <button type="button" class="btn btn-success" id="randButton">One Joke, Please.</button>
             </div>
         </div>
-    </div>
+    </div> --}}
     <div class="row">
         <div class="col-lg-3">
             <div class="container">
