--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
         <div class="row align-items-center">
             <div class="col lg-3"></div>
             <div class="col lg-6">
-                <div class="card" style="background-color: darkgoldenrod; font-family: 'Donegal One', serif; font-size:20px;">
+                <div class="card" style="background-color: darkgoldenrod; color:white; font-family: 'Donegal One', serif; font-size:20px;">
                     <div class="card-body">
                         <form>
                             <div class="mb-3">
