Fixed syntax error

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,7 +50,7 @@
                                 <label for="passInput" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="passInput">
                             </div>
-                            <button type="submit" class="btn btn-success id:"loginButton">Login</button>
+                            <button type="submit" class="btn btn-success" id:"loginButton">Login</button>
                         </form>
                     </div>
                 </div>
