Last minute bug fixes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,13 +52,14 @@
                             </div>
                             <button type="submit" class="btn btn-success" id:"loginButton">Login</button>
                         </form>
+                        <p class="lead">Don't have an account? <a href="/signup">Sign Up</a> here!</p>
                     </div>
                 </div>
             </div>
             <div class="col lg-3"></div>
         </div>
       
-        <div class="row">
+        {{!-- <div class="row">
         <div class="col-lg-3">
 
             <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px;">
@@ -72,6 +73,6 @@
 
                 <img class="card-img" src="../public/images/jokeImg2.png" alt="Card image">
             </div>
-        </div>
+        </div> --}}
       </div>
     </div>
