--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <a class="navbar-brand" href="/"><h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <div class="container-fluid">
+        <a class="navbar-brand" href="/"><h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase</a>
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -75,17 +77,19 @@
     </div> --}}
     <div class="row">
         <div class="col-lg-3">
-            <div class="container">
-                <img class="img-thumbnail" src="../public/images/jokeImg7.png" alt="Image Thumbnail" width="304" height="236">
+            <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px;">
+              <img class="card-img" src="../public/images/jokeImg7.png" alt="Card image">
             </div>
         </div>
-
         <div class="col-lg-6"></div>
-
         <div class="col-lg-3">
-            <div class="container">
-                <img class="img-thumbnail" src="../public/images/jokeImg6.png" alt="Image Thumbnail" width="304" height="236">
-            </div>  
+            <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px;">
+                <img class="card-img" src="../public/images/jokeImg6.png" alt="Card image">
+            </div>
         </div>
-      </div>
 </div>
+</div>
+
+
+
+
