--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div> --}}
-    <div class="row">
+    {{!-- <div class="row">
         <div class="col-lg-3">
             <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px;">
               <img class="card-img" src="../public/images/jokeImg7.png" alt="Card image">
@@ -86,7 +86,7 @@
             <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px;">
                 <img class="card-img" src="../public/images/jokeImg6.png" alt="Card image">
             </div>
-        </div>
+        </div> --}}
 </div>
 </div>
 
