--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,16 +4,19 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <div class="container-fluid">
         <a class="navbar-brand" href="/"><h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase</a>
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/repunsatory">Repunsatory</a>
+                    <a class="nav-link" href="/index">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/profile">Profile</a>
+                </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="/repunsatory">Repunsatory</a>
                 </li>
             </ul>
             <button class="btn btn-outline-success" type="click" id="logoutBtn">Logout</button>
