--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,10 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/repunsatory">Repunsatory</a>
+                    <a class="nav-link" href="/index">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/profile">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/repunsatory">Repunsatory</a>
                 </li>
             </ul>
             <button class="btn btn-outline-success" type="click" id="logoutBtn">Logout</button>
