--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -45,13 +45,13 @@
                             </div>
                             <div class="mb-3">
                                 <label for="passInput" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="passCreate" onkeyup="check()">
+                                <input type="password" class="form-control" id="passCreate">
                                 <div id="passwordHelpBlock" class="form-text">
                                     Please create a password that is 6-20 characters long.
                                 </div>
                                 <div class="mb-3">
                                     <label for="passInput" class="form-label">Verify password</label>
-                                    <input type="password" class="form-control" id="passVerify" onkeyup="check()">
+                                    <input type="password" class="form-control" id="passVerify">
                                     <span class="text-muted" id="message"></span>
                                 </div>
                             </div>
