--- a/views/repunsatory.handlebars
+++ b/views/repunsatory.handlebars
@@ -1,28 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/"><h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/repunsatory">Repunsatory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/profile">Profile</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <h2><i class="far fa-grin-squint-tears"></i></h2>The Dadabase
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/repunsatory">Repunsatory</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profile">Profile</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
 
 
 
-   
+
 <div class="container">
     <div class="row align-items-center">
         <div class="col lg-3"></div>
@@ -38,7 +39,8 @@
     <div class="row align-items-center">
         <div class="col lg-10">
             <div class="card">
-                <div class="card-body" style="background-color: darkgoldenrod; font-family: 'Donegal One', serif; font-size:20px;">
+                <div class="card-body"
+                    style="background-color: darkgoldenrod; font-family: 'Donegal One', serif; font-size:20px;">
                     <h5 class="card-title text-center">The Dadabase</h5>
                     <br>
                     <ul class="list-group">
@@ -51,19 +53,21 @@
         </div>
     </div>
     {{! Added cards - For some reason my css wasn't hitting some divs, so I just styled them here }}
-    <div class="row">
+    {{!-- <div class="row">
         <div class="col-lg-3">
-            <div class="card" style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
-              <img class="card-img" src="../public/images/jokeImg1.png" alt="Card image">
+            <div class="card"
+                style="max-width: 18rem; background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px; margin-top:300px">
+                <img class="card-img" src="../public/images/jokeImg1.png" alt="Card image">
             </div>
         </div>
 
         <div class="col-lg-6"></div>
 
         <div class="col-lg-3">
-            <div class="card" style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
+            <div class="card"
+                style="background-color:black; border-width:5px; height:300px; width:300px; margin-right:0px; margin-top:300px">
                 <img class="card-img" src="../public/images/jokeImg5.png" alt="Card image">
             </div>
         </div>
-      </div>
+    </div> --}}
 </div>
