Updated jokes API frontend

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -62,19 +62,18 @@
             </div>
         </div>
     </div>
-    {{!-- <div class="row align-items-center">
+    <div class="row align-items-center">
         <div class="col lg-10">
             <div class="card mb-3">
                 <div class="card-header text-center">Looking for inspiration?</div>
                 <div class="card-body">
                     <h5 class="card-title text-center">Don't groan it alone! Click below for a random joke.</h5>
-                    <p class="lead" id="setupTag"></p>
                     <p class="lead" id="punchLineTag"></p>
                 </div>
                 <button type="button" class="btn btn-success" id="randButton">One Joke, Please.</button>
             </div>
         </div>
-    </div> --}}
+    </div>
     {{!-- <div class="row">
         <div class="col-lg-3">
             <div class="card" style="background-color: black; border-width:5px; height:300px; width:300px; margin-left:0px;">
